<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">&quot;Sam's Converter&quot;</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="start_label">In order to use this app, please follow these instructions. Select a unit of measurement from the input drop down menu, then select a different unit of measurement from the output drop down menu. Type any numerical value into the input field. Press \'Convert\' and the app will perform the desired conversion.</string>
    <string name="startButton">Start!</string>
    
    <string name="second_window_instructions">In order to use this app, please follow these instructions. Select a unit of measurement from the upper, or input, drop down menu, then select a different unit of measurement from the lower, or output, drop down menu. Type any numerical value into the input field. Press \'Convert\' and the app will perform the desired conversion.</string>
    <string name="second_window_input">Input</string>
    <string name="second_window_output">Output</string>
    <string name="second_window_convert">Convert</string>
    <string name="second_window_return">Return</string>
    <string name="second_window_title">Conversion Tool</string>
    <string name="second_window_clear">Clear</string>
    <string name="second_window_about">About</string>
    
    <string name="dialog_ok">OK</string>
    <string name="Dialog_app">Dialog</string>
    
    <string-array name="second_window_units_array">
        <item>Centimeters</item>
        <item>Inches</item>
        <item>Feet</item>
        <item>Yards</item>
        <item>Meters</item>
        <item>Miles</item>
        <item>Kilometers</item>
    </string-array>

</resources>
