<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical" >

    <TextView
        android:id="@+id/dialog_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/second_window_title"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/second_window_input_spinner"
        android:layout_alignBottom="@+id/second_window_input_spinner"
        android:layout_alignParentLeft="true"
        android:text="@string/second_window_input"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/input"
        android:layout_marginTop="18dp"
        android:text="@string/second_window_output"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/second_window_input_spinner"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <Spinner
        android:id="@+id/second_window_output_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView2"
        android:layout_toRightOf="@+id/returnButton"
        android:gravity="center_vertical"
        tools:listitem="@android:layout/simple_spinner_item" />

    <Spinner
        android:id="@+id/second_window_input_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/second_window_output_spinner"
        android:layout_below="@+id/dialog_instructions"
        android:gravity="center_vertical"
        tools:listitem="@android:layout/simple_spinner_dropdown_item" />

    <EditText
        android:id="@+id/output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/dialog_instructions"
        android:layout_below="@+id/second_window_output_spinner"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/returnButton"
        android:layout_alignBottom="@+id/returnButton"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@+id/convert"
        android:text="@string/second_window_clear" />

    <Button
        android:id="@+id/convert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/about"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="17dp"
        android:text="@string/second_window_convert" />

    <Button
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/returnButton"
        android:layout_centerHorizontal="true"
        android:text="@string/second_window_about" />

    <Button
        android:id="@+id/returnButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="28dp"
        android:text="@string/second_window_return" />

</RelativeLayout>